# scientist-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
data/samples/: coursework-figures.md  scientist-assistant-note.md
docs/: demo.md
prompts/: scientist-prompt.md
src/scientist_rag_assistant/: __init__.py  demo.py
