[project]
name = "scientist-rag-assistant"
version = "1.0.0"
description = "Русскоязычный RAG+LLM помощник учёного для работы с источниками и курсовым исследованием."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
scientist-rag-demo = "scientist_rag_assistant.demo:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scientist_rag_assistant"]

